# usta

./: README.md  pyproject.toml  requirements.txt  settings.pkl
docs/: appimage.md
packaging/appimage/: AppRun  usta.desktop
scripts/: build-appimage.sh
src/: config.py  i18n.py  main.py
src/core/: exceptions.py  shortcut.py  worker.py
src/core/extension/: __init__.py  system_info.py
src/core/ocr/: __init__.py  ocr_manager.py  paddleocr_engine.py  rapidocr_engine.py
src/core/platform/: __init__.py  capabilities.py  capability_resolver.py
src/core/platform/linux/: capabilities.py
src/core/platform/linux/gnome/: capabilities.py
src/core/platform/linux/kde/: capabilities.py
src/core/platform/macos/: capabilities.py
src/core/platform/windows/: capabilities.py
src/core/screenshot/: __init__.py  base_screenshot.py  portal_screenshot.py  screenshot_factory.py  spectacle_screenshot.py
src/core/sniper/: core_sniper.py
src/core/translation/: __init__.py  deepl_engine.py
src/translations/tr/LC_MESSAGES/: messages.mo  messages.po
src/ui/: __init__.py  main_window.py  overlay_window.py  result_popup.py
src/ui/assets/: usta.xcf
src/ui/tabs/: __init__.py  about_tab.py  appearance_tab.py  hotkey_tab.py  ocr_tab.py  save_tab.py  settings_tab.py  status_tab.py  translation_tab.py
